Updating for policykit
Signed-off-by: Dario Freddi <drf54321@gmail.com>

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -199,6 +199,13 @@ p, li { white-space: pre-wrap; }
         </property>
        </spacer>
       </item>
+      <item>
+       <widget class="QPushButton" name="generateButton">
+        <property name="text">
+         <string>Genera Configurazione</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
