--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -210,6 +210,13 @@ p, li { white-space: pre-wrap; }
     <item>
      <layout class="QHBoxLayout" name="bottomHorizontalLayout">
       <item>
+       <widget class="QPushButton" name="closeButton">
+        <property name="text">
+         <string>Chiudi</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
