--- a/policonnect.qrc
+++ b/policonnect.qrc
@@ -5,5 +5,6 @@
         <file>icons/document-encrypt.png</file>
         <file>icons/document-open.png</file>
         <file>icons/polimi.png</file>
+        <file>icons/application-exit.png</file>
     </qresource>
 </RCC>
